fix overflow issue

--- a/amp-pwa-reader/css/article.css
+++ b/amp-pwa-reader/css/article.css
@@ -1,6 +1,7 @@
 /* Article */
 
-.article-shown body {
+.article-shown main {
+    max-height: 100vh;
     overflow: hidden;
 }
 
@@ -9,7 +10,5 @@ article {
     top: var(--header-height);
     left: 0;
     right: 0;
-    bottom: 0;
     z-index: 2;
-    overflow: auto;
 }
