--- a/amp-pwa-reader/css/card.css
+++ b/amp-pwa-reader/css/card.css
@@ -16,6 +16,7 @@
     will-change: transform;
     contain: content;
     transform-origin: top center;
+    user-select: none;
 }
 
 .card > * {
